# xtrc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/demo_app/: app.py
examples/demo_app/src/: api.ts  score.js
plugins/nvim/: README.md  xtrc.lua
plugins/nvim/lua/xtrc/: init.lua
plugins/nvim/plugin/: xtrc.lua
scripts/: bench_query.py  demo_semantic_ranking.sh  install.sh  reindex_with_semantics.sh  run_demo.sh
tests/: test_chunk_summarizer.py  test_chunker.py  test_config_defaults.py  test_config_gemini.py  test_gemini_client.py  test_indexer_intent.py  test_indexer_summarizer.py  test_local_rerank.py  test_query_engine_gemini.py  test_query_rewrite.py  test_ranking_heuristics.py  test_repo_walk.py  test_reranker.py  test_route_signals.py  test_scorer.py
xtrc/: __init__.py  __main__.py  cli.py  client.py  config.py  logging.py  schemas.py  server.py
xtrc/api/: __init__.py  routes.py
xtrc/core/: __init__.py  chunker.py  daemon.py  embeddings.py  errors.py  indexer.py  metadata_store.py  models.py  parser.py  query_engine.py  repo.py  route_signals.py  scorer.py  tokenizer.py  vector_store.py
xtrc/indexer/: __init__.py  intent.py  summarizer.py
xtrc/llm/: __init__.py  chunk_summarizer.py  gemini_client.py  reranker.py  text_client.py
xtrc/query/: __init__.py  rerank.py  rewrite.py
xtrc/ranking/: __init__.py  heuristics.py
