[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtrc"
version = "0.1.0"
description = "Local AI-powered code navigation daemon and clients"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "xtrc maintainers" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "sentence-transformers>=3.0.0",
  "qdrant-client>=1.11.0",
  "tree-sitter>=0.23.0",
  "tree-sitter-python>=0.23.0",
  "tree-sitter-javascript>=0.23.0",
  "tree-sitter-typescript>=0.23.0",
  "numpy>=1.26.0",
  "pathspec>=0.12.1",
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "google-generativeai>=0.8.0",
  "openai>=1.50.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-requests>=2.32.0"
]

[project.scripts]
xtrc = "xtrc.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["xtrc*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
